* process.c: Describe the behavior which Ruby invokes a commandline   directly without shell if the commandline is simple enough.   [ruby-core:50459] [Bug #7489]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@40083 b2dd03c8-39d4-4d8f-98ff-823fe69b080e